sort.dutchflag.DutchFlagAlgo.scala.error
Compilation error:
DutchFlagAlgo:7: error: missing arguments for method getCouleur in class DutchFlagEntity;
follow this method with `_' if you want to treat it as a partially applied function
    if (getCouleur(w)=BLANC){
        ^DutchFlagAlgo:10: error: missing arguments for method getCouleur in class DutchFlagEntity;
follow this method with `_' if you want to treat it as a partially applied function
    else if (getCouleur(w)=BLEU){
             ^DutchFlagAlgo:15: error: missing arguments for method getCouleur in class DutchFlagEntity;
follow this method with `_' if you want to treat it as a partially applied function
    else if  (getCouleur(w)=ROUGE){
              ^